@@ -1,3 +1,8 @@
+2001-06-17  Per Bothner  <per@bothner.com>
+
+	* Makefile.am (SUBDIRS):  Use automake conditionals for swing.
+	Always do commonlisp.
+
 2001-06-09  Per Bothner  <per@bothner.com>
 
 	* Makefile.am (SUBDIRS):  Use automake conditionals for xml.
